# adaptivecards-cpp

./: CMakeLists.txt
include/: ac.hpp  ac_glz.hpp
src/: ac.cpp  test.cpp
